add films sort method
